# Resume-Parser-Career-RoadMap

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: __init__.py  ai_service.py  main.py  parser.py  schemas.py
frontend/: app.py  requirements.txt
